# learning-python

./: .gitignore  .gitmodules  .learning-mentor.toml  CHEATSHEET.md  LEARNING_REPOSITORY_PROMPT.md  README.md  pyproject.toml  requirements-dev.txt
.claude/skills/: guided-learning  python-learning-path
.codex/agents/: learning-mentor.toml
.github/agents/: learning-mentor.agent.md  learning-tutor.agent.md
.github/workflows/: course.yml  lessons.yml
capstones/: README.md
capstones/comparative/: README.md
capstones/idiomatic/: README.md  SPEC.md
docs/: AI_TUTOR.md  CAPSTONE_MIGRATION.md  README.md  SETUP.md
exercises/: README.md
exercises/00_playground/: README.md
exercises/01_basics/: README.md  exercises.py  solutions.py
exercises/01_python_fundamentals/: README.md  exercises.py  solutions.py
exercises/02_control_flow/: README.md  exercises.py  solutions.py
exercises/02_text_and_numbers/: README.md  exercises.py  solutions.py
exercises/03_collections/: README.md  exercises.py  solutions.py
exercises/03_functions/: README.md  exercises.py  solutions.py
exercises/04_control_flow/: README.md  exercises.py  solutions.py
exercises/04_data_structures/: README.md  exercises.py  solutions.py
exercises/05_functions/: README.md  exercises.py  solutions.py
exercises/05_modules_and_files/: README.md  exercises.py  solutions.py
exercises/07_advanced_python/: README.md  (+2 more)
exercises/14_environments_processes_and_packaging/solution_distribution/: README.md  pyproject.toml
exercises/14_environments_processes_and_packaging/starter_distribution/: README.md  pyproject.toml
exercises/14_environments_processes_and_packaging/starter_distribution/src/timekeeper_cli/: __init__.py
lessons/: README.md
lessons/09_tooling_and_debugging/example_distribution/: README.md  pyproject.toml
lessons/09_tooling_and_debugging/example_distribution/src/packaging_public_api_example/: __init__.py
project/: README.md
projects/: README.md
scripts/: check_markdown_links.py  erase_coverage_data.py
(+436 files in other folders)
